--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Aniol Civit | MS in Automatic Control and Robotics" />
+  <meta property="og:title" content="Aniol Civit" />
   <meta property="og:description" content="MS in Automatic Control and Robotics" />
   <meta property="og:url" content="https://acivit.github.io/" />
-  <meta property="og:site_name" content="Aniol Civit | MS in Automatic Control and Robotics" />
+  <meta property="og:site_name" content="Aniol Civit" />
   <meta property="article:publisher" content="https://acivit.github.io/" />
   <meta property="og:image" content="https://acivit.github.io/examples/preview.JPG" />
 </head>
@@ -213,11 +213,10 @@
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java, C, C++, HTML/CSS, Bash</li>
+            <li><b>Languages:</b> Python, C++, C, Java, HTML/CSS, Bash</li>
             <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV, fastai, ...</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA, ROS</li>
+            <li><b>Frameworks:</b> Django, Flask, Keras, TensorFlow, PyTorch </li>
+            <li><b>Tools & Technologies:</b> Git, Docker, AWS, SCRUM, ROS</li>
           </ul>
         </p>
         <p>
@@ -243,7 +242,7 @@
       <h3 class="page-title white-text teal">Experience</h3>
       <div class="container">
 
-        <!-- Latest Experience -->
+        <!-- Datision Experience -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -281,45 +280,80 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>
         </div>
 
-        
+        <!-- IRI Simbiots Experience -->
         <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.iri.upc.edu/" target="_blank"><img alt="IRI logo"
+                    src="/assets/img/logo_iri.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a href="https://www.iri.upc.edu/" target="_blank"
+                      class="teal-text hoverline">IRI Institut de Robòtica i Informàtica Industrial</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Research support</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Collaboration in Simbiots Project as a research support staff.
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Deep Learning based algorithms for human 3D pose estimation from RGBD data.
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Detection of reflecting objects and 3D position and orientation estimation using RGBD cameras.
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
               <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
+                Human - Robot interaction where the robot had to offer cleaning sponges after using them to clean the previous reflecting objects.
+              </li>
+              <li>
+                <b>Tools:</b> Python, OpenCV, Keras, PyTorch, C++, ROS
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>Oct 2020 - Mar 2021 | Barcelona</span>
+          </div>
+        </div>
+
+        <!-- IRI internship Experience -->
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.iri.upc.edu/" target="_blank"><img alt="IRI logo"
+                    src="/assets/img/logo_iri.png" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://www.iri.upc.edu/" target="_blank"
+                      class="teal-text hoverline">IRI Institut de Robòtica i Informàtica Industrial</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Research internship</div>
+            <ul>
+              <li>
+                Research internship in the project: Animated Characters based on textual descriptors. 
+              </li>
+              <li>
+                Creation of a blender add-on for human bodies creation and customization. https://arxiv.org/abs/2103.14507
+              </li>
+              <li>
+                Analysis of the important body mesh points for physical characteristics that have to be modified to change the physical appearance, such as the gender, age, weight, height... 
+              </li>
+              <li>
+                <b>Tools:</b> Python, Blender, Keras, PyTorch
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>Mar 2019 - Sep 2019 | Barcelona</span>
           </div>
         </div>
 
@@ -356,44 +390,6 @@ of each drug container to estimate the degradation of the drug.
           </div>
           <div class="card-action">
             <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
-          </div>
-        </div>
-
-        <!-- Experience 3 -->
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
-              </div>
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
-            <ul>
-              <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
-              </li>
-              <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
           </div>
         </div>
 
