finished previous experience

--- a/index.html
+++ b/index.html
@@ -261,22 +261,20 @@
             <div class="role brown-text text-darken-2">AI Developer</div>
             <ul>
               <li>
-                Developed systems for predictive maintenance and quality control through artificial intelligence models in the industry, 
-                collecting data through sensors, storing and managing them in databases and creating the algorithms to .
+                Developed systems for predictive maintenance and quality control through artificial intelligence models in the industry 4.0.
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Detection and anticipation of defects in manufacturing processes.
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
+              <li>Recommendations system for optimal production conditions using Reinforcement Learning.</li>
+              <li>Real-time human pose estimation and physical information gatherer using RGB cameras.</li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Python, Flask, Postgresql, Docker, Django, Tensorflow, Pytorch, Keras, AWS, Arduino, RaspberryPi
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span> Mar 2021 - Jun 2023 | Terrassa</span>
           </div>
         </div>
 
@@ -292,7 +290,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.iri.upc.edu/" target="_blank"
-                      class="teal-text hoverline">IRI Institut de Robòtica i Informàtica Industrial</a></span>
+                      class="teal-text hoverline">Institut de Robòtica i Informàtica Industrial</a></span>
                 </p>
               </div>
             </div>
@@ -332,17 +330,18 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.iri.upc.edu/" target="_blank"
-                      class="teal-text hoverline">IRI Institut de Robòtica i Informàtica Industrial</a></span>
+                      class="teal-text hoverline">Institut de Robòtica i Informàtica Industrial</a></span>
                 </p>
               </div>
             </div>
             <div class="role brown-text text-darken-2">Research internship</div>
             <ul>
               <li>
-                Research internship in the project: Animated Characters based on textual descriptors. 
+                Research internship in the project: Animated Characters based on textual descriptors.
               </li>
               <li>
-                Creation of a blender add-on for human bodies creation and customization. https://arxiv.org/abs/2103.14507
+                Creation of a blender add-on for human bodies creation and customization.
+                <a href = "https://arxiv.org/abs/2103.14507" target="_blank">Article of the work</a>
               </li>
               <li>
                 Analysis of the important body mesh points for physical characteristics that have to be modified to change the physical appearance, such as the gender, age, weight, height... 
@@ -356,45 +355,6 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <span>Mar 2019 - Sep 2019 | Barcelona</span>
           </div>
         </div>
-
-        <!-- Experience 2 -->
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <img alt="Mtag logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
-
-              </div>
-
-              <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
-            <ul>
-              <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
-              </li>
-              <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Flask, JavaScript
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
 
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
