--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
                   <p>
                     <b>Master final thesis</b>
                   <ul>
-                    <b>Reinforcement Learning for robotic assisted tasks</b>
-                    <b>Made at IRI</b>
-                    <a href="https://www.iri.upc.edu/master_thesis/show/162" target="_blank">Link to the project</a>
+                    <hr>Reinforcement Learning for robotic assisted tasks</hr>
+                    <hr>Made at IRI</hr>
+                    <hr><a href="https://www.iri.upc.edu/master_thesis/show/162" target="_blank">Link to the project</a>/hr>
                   </ul>
                   </p>
 
