--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.iri.upc.edu/" target="_blank"
-                      class="teal-text hoverline">Institut de Robòtica i Informàtica Industrial</a></span>
+                      class="teal-text hoverline">IRI</a></span>
                 </p>
               </div>
             </div>
@@ -329,7 +329,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.iri.upc.edu/" target="_blank"
-                      class="teal-text hoverline">Institut de Robòtica i Informàtica Industrial</a></span>
+                      class="teal-text hoverline">IRI</a></span>
                 </p>
               </div>
             </div>
@@ -516,7 +516,7 @@
                   <ul>
                     <hr>Reinforcement Learning for robotic assisted tasks</hr>
                     <hr>Made at IRI</hr>
-                    <hr><a href="https://www.iri.upc.edu/master_thesis/show/162" target="_blank">Link to the project</a>/hr>
+                    <hr><a href="https://www.iri.upc.edu/master_thesis/show/162" target="_blank">Link to the project</a></hr>
                   </ul>
                   </p>
 
