Changing format in about section

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     </section>
 
     <!-- Second Section: About -->
-    <section id="about" class="section scrollspy">
+    <section id="about" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">About</h3>
-      <div class="container flow-text">       
+      <div class="container">       
         <p>
           I'm currently doing my PhD studies in robotics at the <a href="https://www.iri.upc.edu/">Institut de Robòtica i Informàtica Industrial de Barcelona (IRI)</a>. 
           My research focus is in the personalization of the Human-Robot Interaction. The thesis is supervised by Dr. Guillem Alenyà and Dr. Antonio Andriella.
