--- a/index.html
+++ b/index.html
@@ -180,9 +180,19 @@
     <section id="publications" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Publications</h3>
       <div class="container">
-        <p>
-          Just started :) 
-        </p>
+        <div class="publication">
+          <span class="badge">Best Late Breaking Report Aware Nominee</span>
+          <div class="publication-text">
+            <!-- Text of your publication -->
+            <p>
+              A. Civit, A. Andriella, C. Barrue, M. Antonio, C. Boqué and G. Alenyà. 
+              Introducing social robots to assess frailty in older adults,
+              2024 ACM/IEEE International Conference on Human-Robot Interaction, 2024, Boulder, CO, USA, to appear.</p>
+          </div>
+          <!-- Buttons -->
+          <button class="btn btn-cite" onclick="openCitation(Civit_hri24)">Cite</button>
+          <a class="btn btn-pdf" href="http://www.iri.upc.edu/files/scidoc/2785-Introducing-Social-Robots-to-Assess-Frailty-in-Older-Adults.pdf" target="_blank">PDF</a>
+        </div>
       </div>
     </section>
 
