--- a/index.html
+++ b/index.html
@@ -190,8 +190,15 @@
               2024 ACM/IEEE International Conference on Human-Robot Interaction, 2024, Boulder, CO, USA, to appear.</p>
           </div>
           <!-- Buttons -->
-          <button class="btn btn-cite" onclick="openCitation('Civit_hri24')">Cite</button>
+          <button class="btn btn-cite" onclick="openCitation_modal('Civit_hri24')">Cite</button>
           <a class="btn btn-pdf" href="http://www.iri.upc.edu/files/scidoc/2785-Introducing-Social-Robots-to-Assess-Frailty-in-Older-Adults.pdf" target="_blank">PDF</a>
+        </div>
+        <!-- Modal for citation -->
+        <div id="citationModal" class="modal">
+          <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <pre id="citationContent"></pre>
+          </div>
         </div>
       </div>
     </section>
