--- a/index.html
+++ b/index.html
@@ -411,15 +411,6 @@
 
   <!-- typed.js -->
   <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script type="text/javascript">
-    var typed = new Typed('.typing',{
-      strings: ["PhD Student", "Developer", "Fast Learner", "Roboticist"],
-      loop: true,
-      typeSpeed: 80,
-      backSpeed: 40
-    });
-  </script>
-
 
   <!-- jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -438,7 +429,42 @@
       })
     })
   </script>
-  <script src="script.js"></script>
+  <script>
+  function openCitation_modal(identifier) {
+    var citationText;
+    // Set the citation text based on the identifier
+    if (identifier === "Civit_hri24") {
+      citationText = `@inproceedings{Civit_hri24,
+                      title = {Introducing Social Robots to Assess Frailty in Older Adults},
+                      booktitle = {Proceedings of the 2024 {ACM}/{IEEE} {International} {Conference} on {Human}-{Robot} {Interaction}},
+                      author = {Civit, Aniol
+                                and Andriella, Antonio
+                                and Barrué, Cristian
+                                and Antonio, Maite
+                                and Boqué, Concepción
+                                and Alenyà, Guillem},
+                      publisher = {Association for Computing Machinery},
+                      month = mar,
+                      year = {2024},
+                      pages = {XXX--XXX}
+                      }`;
+    } else {
+      citationText = "No citation available.";
+    }
+    // Display the modal with citation content
+    var modal = document.getElementById("citationModal");
+    var citationContent = document.getElementById("citationContent");
+    citationContent.textContent = citationText;
+    modal.style.display = "block";
+  };
+  
+  function closeModal() {
+    // Close the modal
+    var modal = document.getElementById("citationModal");
+    modal.style.display = "none";
+  };
+</script>
+  <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
