--- a/index.html
+++ b/index.html
@@ -190,15 +190,12 @@
               2024 ACM/IEEE International Conference on Human-Robot Interaction, 2024, Boulder, CO, USA, to appear.</p>
           </div>
           <!-- Buttons -->
-          <button class="btn btn-cite" onclick="openCitation_modal('Civit_hri24')">Cite</button>
+          <button class="btn btn-cite" onclick="toggleCitation('Civit_hri24')">Cite</button>
           <a class="btn btn-pdf" href="http://www.iri.upc.edu/files/scidoc/2785-Introducing-Social-Robots-to-Assess-Frailty-in-Older-Adults.pdf" target="_blank">PDF</a>
         </div>
-        <!-- Modal for citation -->
-        <div id="citationModal" class="modal">
-          <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <pre id="citationContent"></pre>
-          </div>
+        <div id="Civit_hri24" class="citation-container">
+          <span class="close" onclick="closeCitation('Civit_hri24')">&times;</span>
+          <pre id="citationContent1"></pre>
         </div>
       </div>
     </section>
@@ -429,42 +426,8 @@
       })
     })
   </script>
-  <script>
-  function openCitation_modal(identifier) {
-    var citationText;
-    // Set the citation text based on the identifier
-    if (identifier === "Civit_hri24") {
-      citationText = `@inproceedings{Civit_hri24,
-                      title = {Introducing Social Robots to Assess Frailty in Older Adults},
-                      booktitle = {Proceedings of the 2024 {ACM}/{IEEE} {International} {Conference} on {Human}-{Robot} {Interaction}},
-                      author = {Civit, Aniol
-                                and Andriella, Antonio
-                                and Barrué, Cristian
-                                and Antonio, Maite
-                                and Boqué, Concepción
-                                and Alenyà, Guillem},
-                      publisher = {Association for Computing Machinery},
-                      month = mar,
-                      year = {2024},
-                      pages = {XXX--XXX}
-                      }`;
-    } else {
-      citationText = "No citation available.";
-    }
-    // Display the modal with citation content
-    var modal = document.getElementById("citationModal");
-    var citationContent = document.getElementById("citationContent");
-    citationContent.textContent = citationText;
-    modal.style.display = "block";
-  };
-  
-  function closeModal() {
-    // Close the modal
-    var modal = document.getElementById("citationModal");
-    modal.style.display = "none";
-  };
-</script>
-  <!-- <script src="script.js"></script> -->
+ 
+  <script src="script.js"></script>
 </body>
 
 </html>
