Reducing size of citation

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
         <div id="Civit_hri24" class="citation-container">
           <span class="close" onclick="closeCitation('Civit_hri24')">&times;</span>
-          <pre id="citationContent1"></pre>
+          <pre id="citationContent1" class="pre-citation"></pre>
         </div>
       </div>
     </section>
