Adding journals and conferences sections

--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
     <!-- Third Section: Publications -->
     <section id="publications" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Publications</h3>
+      <h4 class="page-title white-text teal">Journals</h4>
+      <p> Not yet :) </p>
+      <h4 class="page-title white-text teal">Conferences</h4>
       <div class="container">
         <div class="publication">
           <span class="badge">Best Late Breaking Report Aware Nominee</span>
