Changing journal and conferences sections

--- a/index.html
+++ b/index.html
@@ -179,9 +179,15 @@
     <!-- Third Section: Publications -->
     <section id="publications" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Publications</h3>
-      <h5 class="page-title white-text teal">Journals</h5>
-      <p> Not yet :) </p>
-      <h6 class="page-title white-text teal">Conferences</h6>
+      <div class="container">
+        <h4>Journals</h4>
+        <p> Not yet :) </p>
+
+      </div>
+
+      <div class="container">
+        <h4>Conferences</h4>
+      </div>
       <div class="container">
         <div class="publication">
           <span class="badge">Best Late Breaking Report Aware Nominee</span>
