--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
     <section id="publications" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Publications</h3>
       <div class="container">
-        <h4>Journals</h4>
+        <h4><b>Journals</b></h4>
         <p> Not yet :) </p>
 
       </div>
 
       <div class="container">
-        <h4>Conferences</h4>
+        <h4><b>Conferences</b></h4>
       </div>
       <div class="container">
         <div class="publication">
