Changing best lBR

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>
       <div class="container">
         <div class="publication">
-          <span class="badge">Best Late Breaking Report Aware Nominee</span>
+          <span class="badge">Best Late Breaking Report Award Nominee (6 nominateds out of 215)</span>
           <div class="publication-text">
             <!-- Text of your publication -->
             <p>
