Changing education and details to improve

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
     </section>
 
     <!-- Fourth Section: Projects -->
-    <section id="projects" class="section scrollspy">
-      <h3 class="page-title white-text teal">Projects</h3>
+    <section id="research_projects" class="section scrollspy">
+      <h3 class="page-title white-text teal">Research Projects</h3>
       <div class="container">
         <div class="row">
 
@@ -350,7 +350,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Egopose" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Egopose" src="/assets/img/iri_project.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">EGOPOSE<i
@@ -520,19 +520,9 @@
             <!-- PhD -->
             <div class="card">
               <div class="card-content">
-                <div class="row">
-                  <div class="col s12 m2">
-                    <a href="https://arv.phd.upc.edu/en/" target="_blank"><img alt="IRI logo"
-                        src="/assets/img/logo_iri.png" class="responsive-img center-block" /></a>
-                  </div>
-                  <!-- <div class="col s12 m10"> -->
-                  <div class="col s12 m10">
-                    <p>
-                      <span class="card-title"><a href="https://arv.phd.upc.edu/en/" target="_blank"
-                          class="teal-text hoverline">IRI, CSIC-UPC</a></span>
-                    </p>
-                  </div>
-                </div>
+                <p>
+                  <span class="card-title"><a href="https://arv.phd.upc.edu/en/" target="_blank" class="teal-text hoverline">IRI, CSIC-UPC</a></span>
+                </p>
                 <div class="role brown-text text-darken-2">PhD in Automatic Control, Robotics and Computer Vision</div>
                   <ul>
                     <p>PhD in personalization and adaptation in robotic assisted tasks
@@ -548,19 +538,9 @@
             <!-- Master -->
             <div class="card">
               <div class="card-content">
-                <div class="row">
-                  <div class="col s12 m2">
-                    <a href="https://www.upc.edu/en/masters/automatic-control-and-robotics?_gl=1*9tfjpe*_ga*NzI2ODkxMTQ2LjE2ODU2MTEwMTc.*_ga_P80Z250TEZ*MTcwNDg5NzA4My45LjEuMTcwNDg5NzA5My41MC4wLjA." target="_blank"><img alt="IRI logo"
-                        src="/assets/img/UPC.png" class="responsive-img center-block" /></a>
-                  </div>
-                  <!-- <div class="col s12 m10"> -->
-                  <div class="col s12 m10">
-                    <p>
-                      <span class="card-title"><a href="https://www.upc.edu/en/masters/automatic-control-and-robotics?_gl=1*9tfjpe*_ga*NzI2ODkxMTQ2LjE2ODU2MTEwMTc.*_ga_P80Z250TEZ*MTcwNDg5NzA4My45LjEuMTcwNDg5NzA5My41MC4wLjA." target="_blank"
-                          class="teal-text hoverline">UPC</a></span>
-                    </p>
-                  </div>
-                </div>
+                <p>
+                  <span class="card-title"><a href="https://www.upc.edu/en/masters/automatic-control-and-robotics?_gl=1*9tfjpe*_ga*NzI2ODkxMTQ2LjE2ODU2MTEwMTc.*_ga_P80Z250TEZ*MTcwNDg5NzA4My45LjEuMTcwNDg5NzA5My41MC4wLjA." target="_blank" class="teal-text hoverline">ETSEIB, UPC</a></span>
+                </p>
                 <div class="role brown-text text-darken-2">MSc in Automatic Control and Robotics</div>
                   <ul>
                     <p>Master final thesis developed at IRI, with title: Reinforcement Learning for robotic assisted tasks
@@ -579,21 +559,10 @@
             <!-- Grau -->
             <div class="card">
               <div class="card-content">
-                <div class="row">
-                  <div class="col s12 m2">
-                    <a href="https://etseib.upc.edu/ca/estudis/graus/grau-en-enginyeria-en-tecnologies-industrials" target="_blank"><img alt="UPC logo"
-                        src="/assets/img/UPC.png" class="responsive-img center-block" /></a>
-                  </div>
-                  <!-- <div class="col s12 m10"> -->
-                  <div class="col s12 m10">
-                    <p>
-                      <span class="card-title"><a href="https://etseib.upc.edu/ca/estudis/graus/grau-en-enginyeria-en-tecnologies-industrials" target="_blank"
-                          class="teal-text hoverline">UPC</a></span>
-                    </p>
-                  </div>
-                </div>
+                <p>
+                  <span class="card-title"><a href="https://etseib.upc.edu/ca/estudis/graus/grau-en-enginyeria-en-tecnologies-industrials" target="_blank" class="teal-text hoverline">ETSEIB, UPC</a></span>
+                </p>
                 <div class="role brown-text text-darken-2">Bachelor's Degree in Engineering in Industrial Technologies</div>
-                  
               </div>
               <div class="card-action">
                 <span>Sep 2013 - May 2018 | Barcelona</span>
@@ -618,7 +587,7 @@
           <a aria-label="Email Aniol" href="mailto:aniol.civit@upc.edu" target="_blank" data-position="top"
             data-tooltip="Email Aniol" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Aniol" href="mailto:aniol.civit@upc.edu"
-              class="hoverline">aniol.civit@upc.edu</a></a>
+              class="hoverline">acivit@iri.upc.edu</a></a>
         </p>
         <p>
           <a aria-label="View Aniol on GitHub" href="http://github.com/acivit" target="_blank"
