Minor changes for better visuals

--- a/index.html
+++ b/index.html
@@ -523,12 +523,12 @@
                 <p>
                   <span class="card-title"><a href="https://arv.phd.upc.edu/en/" target="_blank" class="teal-text hoverline">IRI, CSIC-UPC</a></span>
                 </p>
-                <div class="role brown-text text-darken-2">PhD in Automatic Control, Robotics and Computer Vision</div>
-                  <ul>
-                    <p>PhD in personalization and adaptation in robotic assisted tasks
-                      <a href="https://www.iri.upc.edu/thesis/show/186" target="_blank">Link</a>
-                    </p>
-                  </ul>
+                <p class="brown-text">PhD in Automatic Control, Robotics and Computer Vision</p>
+                <ul>
+                  <p>PhD in personalization and adaptation in robotic assisted tasks
+                    <a href="https://www.iri.upc.edu/thesis/show/186" target="_blank">Link</a>
+                  </p>
+                </ul>
               </div>
               <div class="card-action">
                 <span>Jun 2023 - Now | Barcelona</span>
@@ -541,12 +541,12 @@
                 <p>
                   <span class="card-title"><a href="https://www.upc.edu/en/masters/automatic-control-and-robotics?_gl=1*9tfjpe*_ga*NzI2ODkxMTQ2LjE2ODU2MTEwMTc.*_ga_P80Z250TEZ*MTcwNDg5NzA4My45LjEuMTcwNDg5NzA5My41MC4wLjA." target="_blank" class="teal-text hoverline">ETSEIB, UPC</a></span>
                 </p>
-                <div class="role brown-text text-darken-2">MSc in Automatic Control and Robotics</div>
-                  <ul>
-                    <p>Master final thesis developed at IRI, with title: Reinforcement Learning for robotic assisted tasks
-                      <a href="https://www.iri.upc.edu/master_thesis/show/162" target="_blank">Link to the project</a>
-                    </p>
-                  </ul>
+                <p class="brown-text">MSc in Automatic Control and Robotics</p>
+                <ul>
+                  <p>Master final thesis developed at IRI, with title: Reinforcement Learning for robotic assisted tasks
+                    <a href="https://www.iri.upc.edu/master_thesis/show/162" target="_blank">Link to the project</a>
+                  </p>
+                </ul>
               </div>
               <div class="card-action">
                 <span>Sep 2018 - Jul 2020 | Barcelona</span>
@@ -562,7 +562,7 @@
                 <p>
                   <span class="card-title"><a href="https://etseib.upc.edu/ca/estudis/graus/grau-en-enginyeria-en-tecnologies-industrials" target="_blank" class="teal-text hoverline">ETSEIB, UPC</a></span>
                 </p>
-                <div class="role brown-text text-darken-2">Bachelor's Degree in Engineering in Industrial Technologies</div>
+                <p class="brown-text">Bachelor's Degree in Engineering in Industrial Technologies</p>
               </div>
               <div class="card-action">
                 <span>Sep 2013 - May 2018 | Barcelona</span>
