Minor changes for better visuals

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 </p>
                 <p class="brown-text">PhD in Automatic Control, Robotics and Computer Vision</p>
                 <ul>
-                  <p>PhD in personalization and adaptation in robotic assisted tasks
+                  <p>Research in personalization and adaptation in robotic assisted tasks
                     <a href="https://www.iri.upc.edu/thesis/show/186" target="_blank">Link</a>
                   </p>
                 </ul>
